--- a/src/components/News/localNews.module.css
+++ b/src/components/News/localNews.module.css
@@ -1,30 +1,65 @@
 .cardContainer {
-    grid-area: news;
+    grid-column: 1/3;
+    grid-row: 1/2;
     display: flex;
     justify-content: center;
     padding: 3.68rem 0rem;
-    width: 70%;
     margin: 0 auto;
 }
 
 .card {
+ 
     background-color: var(--componentsColor);
-    width: 18rem;
-    height: 12.5rem;
+
     display: block;
-    padding: 0.7rem 0.9rem;
+    /* padding: 0.7rem 0.9rem; */
     border-radius: 1.083rem;
     margin: 1rem;
+    width: 19rem;
+    height: auto;
+    position: relative;
+    display: flex;
+    align-items: end;
+    z-index: 1;
 }
 
-.card > .title {
-    font-size: 1.5rem;
+.card  > .gradient {
+    border-radius: 1.083rem;
+    position: absolute;
+    background: rgb(0,0,0);
+    background: -moz-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(255,255,255,1) 78%);
+    background: -webkit-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(255,255,255,1) 78%);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255, 255, 255, 0.088) 44%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#ffffff",GradientType=1); 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+   
+}
+
+.card  > img {
+    object-fit: cover;
+    z-index: -1;
+} 
+
+.card > .details {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    padding: 1rem
+}
+
+.card > .details >.title {
+    font-size: 1.3rem;
     color: white;
 }
 
-.card > p {
+.card > .details > p {
     color: white;
 }
+
+
 
 hr {
     color: var(--componentsColor);
