remove grid from index.css

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   box-sizing: border-box;
   font-family: "PT Serif", serif;
   color: var(--fontColor);
+  letter-spacing: 5%;
+  font-weight: normal;
 }
 
 :root {
@@ -24,12 +26,13 @@ body {
   height: 100vh;      
   margin: 0; */
 }
-
+/* 
 main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas: 
-  "news news news"
+  grid-template-areas:   
+  "news news news"  
   "post post aside";
-  grid-template-rows: auto 1fr;
-}
+  grid-template-rows: auto;
+  gap: 20px;
+} */
