--- a/src/components/Posts/Post/localPost.module.css
+++ b/src/components/Posts/Post/localPost.module.css
@@ -32,10 +32,13 @@
     display: flex;
     align-items: center;
     padding: 0.4rem 0rem;
+    justify-content: space-between;
+    width: 100%;
 }
-
-.post .detailsPost > p {
-    padding-left: 1rem;
+.post .detailsPost .information {
+    display: flex;
+    align-items: center;
+    padding: 0.4rem 0rem;
 }
 
 .post .content {
@@ -46,7 +49,8 @@
     width: 40px;
     height: auto;
     border-radius: 50%;  
-    object-fit: cover; 
+    object-fit: cover;
+    margin-right: 1rem;
 }
 
 .post img {
