--- a/src/components/News/New/localNew.module.css
+++ b/src/components/News/New/localNew.module.css
@@ -34,11 +34,13 @@
  z-index: -1;
  width: 100%;
  height: 17rem;
- border-radius:1.083rem;;
- -webkit-border-radius: 1.083rem;;
- -moz-border-radius: 1.083rem;;
- -ms-border-radius: 1.083rem;;
- -o-border-radius: 1.083rem;;
+ border-radius:1.083rem;
+ -webkit-border-radius: 1.083rem;
+ -moz-border-radius: 1.083rem;
+ -ms-border-radius: 1.083rem;
+ -o-border-radius: 1.083rem;
+ opacity: 0.7;
+ width: 100%;
 } 
 
 .card > .details {
