--- a/src/components/Subreddits/localSub.module.css
+++ b/src/components/Subreddits/localSub.module.css
@@ -1,8 +1,7 @@
 .subreddits {
     grid-column: 3/4;
     grid-row: 2/3;
-    justify-self: start;
-    width: 100%;
+    justify-self: end;
 }
 
 .subreddits h4 {
@@ -12,4 +11,22 @@
 
 .subreddits ul {
     list-style: none;
+    margin-top: 1rem;
 }
+
+.subreddits > ul > li {
+    padding: 0.5rem 0rem;
+    display: flex;
+    align-items: center;
+}
+
+.subreddits > ul > li > img {
+    width: 13%;
+    margin-right: 1rem;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
